--- a/xfy0618.html
+++ b/xfy0618.html
@@ -2,103 +2,91 @@
 <html lang="zh-TW">
 <head>
 <meta charset="UTF-8" />
-<title>Letter & Photo Viewer</title>
+<title>Vertical Letter & Photo Viewer</title>
 <style>
-    /* 整體背景圖 */
+    /*—— 基本 ——*/
+    *{box-sizing:border-box;margin:0;padding:0;}
     body{
-        margin:0;
-        font-family:system-ui,"Helvetica Neue",sans-serif;
         background:url("background.png") center/cover no-repeat fixed;
-        height:100vh;
+        height:100vh;        /* 讓 #stage 跟著整個螢幕 */
+        font-family:system-ui,"Helvetica Neue",sans-serif;
     }
-
-    /* 讓所有前景元素用絕對定位，方便還原示意圖的排版 */
     #stage{
         position:relative;
         width:100%;
         height:100%;
     }
 
-    /* 左上 ICON */
-    #icon{
-        position:absolute;
-        top:40px; left:40px;
-        width:260px; height:150px;
-        box-shadow:0 0 0 1px #0003;
-    }
-    #icon img{width:100%;height:100%;object-fit:cover;}
-
-    /* 左下 PHOTO（隨頁面切換）*/
-    #photo{
-        position:absolute;
-        top:300px; left:30px;
-        width:300px; height:200px;
-        transform:rotate(-6deg);
-        box-shadow:0 0 0 1px #0003;
-    }
-    #photo img{width:100%;height:100%;object-fit:cover;}
-
-    /* 右側 LETTER（隨頁面切換）*/
+    /*—— LETTER ——*/
     #letterWrapper{
         position:absolute;
-        top:70px; right:40px;
-        width:550px; height:330px;
+        top:4vh;                     /* 與頂端保留一點距離 */
+        left:50%;
+        transform:translateX(-50%);  /* 水平置中 */
+        width:clamp(260px, 80vw, 680px);     /* 隨螢幕伸縮，保留上下限 */
+        aspect-ratio:3/2;            /* 3:2 比例，讓高度自動 */
     }
-    #letterWrapper img{
-        width:100%; height:100%;
+    #letterImg{
+        width:100%;
+        height:100%;
         object-fit:cover;
-        transform:rotate(4deg);
+        transform:rotate(3deg);
         box-shadow:0 0 0 1px #0003;
     }
 
-    /* 上一頁 / 下一頁 按鈕 */
+    /*—— PHOTO ——*/
+    #photo{
+        position:absolute;
+        top:55vh;                    /* 置於畫面下方 */
+        left:50%;
+        transform:translateX(-50%) rotate(-6deg);
+        width:clamp(220px, 70vw, 540px);
+        aspect-ratio:4/3;
+        box-shadow:0 0 0 1px #0003;
+    }
+    #photoImg{width:100%;height:100%;object-fit:cover;}
+
+    /*—— 導覽按鈕 ——*/
     .navBtn{
         position:absolute;
         top:50%; translate:0 -50%;
-        width:48px; height:70px;
+        width:clamp(30px, 7vw, 64px);
+        height:clamp(45px, 10vh, 90px);
         border:none; background:transparent;
-        padding:0; cursor:pointer;
+        cursor:pointer; padding:0;
     }
-    /* 左右分別放到畫面外一點，符合示意圖「凸」出的感覺 */
-    #prevBtn{left:-60px;}
-    #nextBtn{right:-60px;}
+    #prevBtn{left:-9vw;}   /* 故意放在信紙外，產生「凸出」效果 */
+    #nextBtn{right:-9vw;}
 
-    /* 把箭頭圖片填滿按鈕 */
     .navBtn img{width:100%;height:100%;object-fit:contain;}
-
-    /* 沒有可點時直接隱藏 */
     .hidden{visibility:hidden;}
 </style>
 </head>
 <body>
 <div id="stage">
 
-    <div id="icon">
-        <img src="icon.png" alt="icon">
-    </div>
-
-    <div id="photo">
-        <img id="photoImg" src="photo1.png" alt="photo">
-    </div>
-
+    <!-- LETTER（帶上一頁 / 下一頁按鈕） -->
     <div id="letterWrapper">
-        <!-- 上一頁 -->
         <button id="prevBtn" class="navBtn">
             <img src="arrow-left.png" alt="Prev">
         </button>
 
         <img id="letterImg" src="letter1.png" alt="letter">
 
-        <!-- 下一頁 -->
         <button id="nextBtn" class="navBtn">
             <img src="arrow-right.png" alt="Next">
         </button>
     </div>
 
+    <!-- PHOTO（隨頁面改變） -->
+    <div id="photo">
+        <img id="photoImg" src="photo1.png" alt="photo">
+    </div>
+
 </div>
 
 <script>
-/* ---------- 簡單的頁面切換邏輯 ---------- */
+/* ----------- 簡易換頁邏輯 ----------- */
 const TOTAL = 4;
 let page = 1;
 
@@ -110,22 +98,14 @@ const next   = document.getElementById("nextBtn");
 function update(){
     letter.src = `letter${page}.png`;
     photo.src  = `photo${page}.JPG`;
-
-    /* 第一頁隱藏 prev，最後一頁隱藏 next */
     prev.classList.toggle("hidden", page === 1);
     next.classList.toggle("hidden", page === TOTAL);
 }
 
-prev.addEventListener("click", () => {
-    if(page > 1){ page--; update(); }
-});
+prev.addEventListener("click", () => { if(page > 1){ page--; update(); } });
+next.addEventListener("click", () => { if(page < TOTAL){ page++; update(); } });
 
-next.addEventListener("click", () => {
-    if(page < TOTAL){ page++; update(); }
-});
-
-/* 初始化 */
-update();
+update();   /* 初始化 */
 </script>
 </body>
 </html>
